infra/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dennokun-backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dennokun-backend
  template:
    metadata:
      labels:
        app: dennokun-backend
    spec:
      containers:
        - name: dennokun-backend
          image: dennokun-backend:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8001
          resources:
            requests:
              cpu: "50m"
              memory: "32Mi"
            limits:
              cpu: "200m"
              memory: "1024Mi"

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: dennokun-frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dennokun-frontend
  template:
    metadata:
      labels:
        app: dennokun-frontend
    spec:
      containers:
        - name: dennokun-frontend
          image: dennokun-frontend:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3001
          resources:
            requests:
              cpu: "50m"
              memory: "32Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
