infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dennokun-ingress
spec:
  ingressClassName: public
  rules:
    - host: dennokun.chrom.jp
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: dennokun-backend-service
                port:
                  number: 8001
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: dennokun-backend-service
                port:
                  number: 8001
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dennokun-frontend-service
                port:
                  number: 3001
  tls:
    - hosts:
        - dennokun.chrom.jp
      secretName: dennokun-chrom-jp-tls  # cert-manager が管理（chrom9103/k8s-certs）
